# flutter-file-hash

./: .gitignore  .gitmodules  .metadata  .pubignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
.github/actions/setup-zig/: action.yml
.github/workflows/: ci.yml  manual-publish.yml  pub-publish.yml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/cpp/: CMakeLists.txt  zig_bridge.cpp  zig_bridge.h  zig_jni.cpp
doc/: benchmarks.md
docs/: benchmarks.md
example/: README.md  example.dart  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
lib/: flutter_file_hash.dart
lib/src/: android_file_hash.dart  flutter_file_hash_base.dart  hash_algorithm.dart  hash_cancellation.dart  hash_exception.dart  hash_options.dart  hex.dart  option_codec.dart  zig_files_hash_bindings.dart  zig_stream_hasher.dart
scripts/: build-zig-android.sh  build-zig-ios.sh  build-zig-linux.sh  build-zig-macos.sh  build-zig-windows.sh  check-prebuilts-platform.sh  check-prebuilts.sh  check-pub-prebuilts.sh
src/: flutter_file_hash.c
test/: flutter_file_hash_test.dart
(+7 files in other folders)
